deployment/alb-ingress-group-feature/spring-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "spring-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:841007833247:certificate/ed1aa824-8a67-4a7c-a505-9dee9a1bb79c
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "4"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/group.name: spring-jersey
  labels:
    app: spring-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /cardiacrehab/v*
            backend:
              serviceName: "spring-service"
              servicePort: 8081
          - path: /cardiacrehab/webjars/spring*
            backend:
              serviceName: "spring-service"
              servicePort: 8081
          - path: /cardiacrehab/v*/api-docs*
            backend:
              serviceName: "spring-service"
              servicePort: 8081
          - path: /cardiacrehab/swagger*
            backend:
              serviceName: "spring-service"
              servicePort: 8081
